fixed header on mobile

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -43,6 +43,21 @@
   text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.4);
 }
 
+.logoArtisan {
+  font-size: 3rem;
+  font-family: 'Allura';
+  font-weight: 400;
+  line-height: 1.1;
+  margin-bottom: -12px;
+}
+
+.logoClinic {
+  font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.1rem;
+  line-height: 1.2;
+  margin-top: 0;
+}
+
 nav ul {
   list-style: none;
   padding: 0;
@@ -150,13 +165,13 @@ nav button:hover {
   .header {
     flex-direction: row;
     justify-content: space-between;
-    padding: 15px 10%;
+    padding: 15px 7%;
     transition: background-color 0.3s ease, padding 0.3s ease;
   }
 
   nav {
     position: absolute;
-    top: 90px;
+    top: 65px;
     left: 0;
     width: 100%;
     background: #111;
